--- a/package.json
+++ b/package.json
@@ -5,24 +5,30 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.11.1",
-    "@prisma/client": "^7.1.0",
-    "next": "16.0.7",
-    "next-auth": "^4.24.13",
-    "openai": "^6.10.0",
-    "prisma": "^7.1.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "@codemirror/lang-css": "^6.2.0",
+    "@codemirror/lang-html": "^6.4.0",
+    "@codemirror/lang-javascript": "^6.1.0",
+    "@uiw/codemirror-theme-vscode": "^4.21.0",
+    "@uiw/react-codemirror": "^4.21.0",
+    "lucide-react": "^0.344.0",
+    "next": "^14.0.4",
+    "openai": "^4.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
+    "typescript": "^5.3.3"
   }
 }
