--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
     "@codemirror/lang-javascript": "^6.1.0",
     "@uiw/codemirror-theme-vscode": "^4.21.0",
     "@uiw/react-codemirror": "^4.21.0",
+    "autoprefixer": "^10.4.16",
     "lucide-react": "^0.344.0",
     "next": "^14.0.4",
     "openai": "^4.0.0",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31"
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
+    "@types/node": "^20.19.25",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
-    "typescript": "^5.3.3"
+    "typescript": "^5.9.3"
   }
 }
